--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,5 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  background-color: #353535;
+  color: aquamarine;
+  font-family: "Space Grotesk", sans-serif;
+}
